<resources>
    <string name="app_name">My Chat App</string>
    <string name="welcome_text">Welcome to Whatsup clone</string>
    <string name="have_account">ALREADY HAVE ACCOUNT</string>
    <string name="need_account">NEED A NEW ACCOUNT ?</string>
    <string name="enteremail">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="createnewacc">Create a New Account</string>
    <string name="displayname">Display Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_Pic">Change Picture</string>
    <string name="chnange_status">Change Status</string>

</resources>