<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.CreateAccountActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="348dp"
        android:layout_height="473dp"
        android:elevation="50dp"
        app:cardBackgroundColor="#EDE2A4"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="109dp"
                android:layout_height="71dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.082"
                app:srcCompat="@android:drawable/stat_notify_chat" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="224dp"
                android:layout_height="26dp"
                android:text="@string/createnewacc"
                android:textColor="#222121"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.041" />

            <EditText
                android:id="@+id/accountDisplayName"
                android:layout_width="218dp"
                android:layout_height="39dp"
                android:hint="@string/displayname"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.632"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.122" />

            <EditText
                android:id="@+id/accountEmail"
                android:layout_width="218dp"
                android:layout_height="39dp"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.637"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountDisplayName"
                app:layout_constraintVertical_bias="0.121" />

            <EditText
                android:id="@+id/accountpass"
                android:layout_width="218dp"
                android:layout_height="39dp"
                android:hint="@string/password"
                android:textSize="18sp"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountEmail"
                app:layout_constraintVertical_bias="0.14" />

            <Button
                android:id="@+id/accountCreateActBtn"
                android:layout_width="152dp"
                android:layout_height="61dp"
                android:text="CREATE A NEW ACCOUNT"

                android:textColor="#EFEBEB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountpass"
                app:layout_constraintVertical_bias="0.458" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>